2009-03-24  Christian Persch  <chpe@gnome.org>

	* src/totem-session.c: (totem_session_restore):
	* src/totem-session.h:
	* src/totem.c: (main): Add smclient options when parsing totem's
	command line. Bug #576620.

2009-03-24  Christian Persch  <chpe@gnome.org>

	* src/eggdesktopfile.c: (egg_set_desktop_file):
	* src/eggsmclient-1.patch:
	* src/eggsmclient.c: (egg_sm_client_get_option_group): Update smclient
	to latest libegg copy. Bug #560328 continued.

2009-03-24  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/screenshot/totem-screenshot-plugin.c (impl_activate):
	Use Ctrl+S not Shift+S to capture a screenshot (Closes: #576610)

2009-03-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c: (setup_vis),
	(bacon_video_widget_set_show_visuals):
	Add support for enabling/disabling visualizations while
	playing some file without requiring a restart.

2009-03-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.in:
	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_handle_application_message), (parse_stream_info),
	(playbin_stream_changed_cb), (bacon_video_widget_finalize),
	(bacon_video_widget_get_subtitle),
	(bacon_video_widget_set_subtitle), (get_lang_list_for_type),
	(bacon_video_widget_get_subtitles), (setup_vis),
	(bvw_get_current_stream_num), (bvw_get_tags_of_current_stream),
	(bvw_get_caps_of_current_stream),
	(bacon_video_widget_get_metadata_string),
	(bvw_update_interfaces_delayed),
	(bvw_update_interface_implementations), (bacon_video_widget_new):
	Initial port of the GStreamer backend to playbin2 (Partially fixes
	bug #542663).

2009-03-22  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* src/plugins/opensubtitles/opensubtitles.py:
	* src/plugins/opensubtitles/opensubtitles.ui:
	If the sub name is long, do not resize the dialog (Fixes bug #576208).

2009-03-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/totem-video-thumbnailer.c: Fix Cairo #include, spotted by Chris